--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "musicMaster",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/BrianNW/musicMaster",
   "devDependencies": {
     "react-scripts": "0.9.3"
   },
